--- a/src/styles/menu.css
+++ b/src/styles/menu.css
@@ -1,11 +1,16 @@
 
-body {
-	font-family: montserrat;
-}
 nav {
 	background: #5534af78;
 	height: 80px;
 	width: 100%;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+
+.logo{
+	margin-top: 20px;
+	cursor: pointer;
 }
 
 nav ul {
