--- a/src/styles/Container.css
+++ b/src/styles/Container.css
@@ -68,6 +68,16 @@ h3{
     width:13vw;
     
   }
+  .home-cards-container{ 
+    position: relative;
+    top: -120px;
+   }
+
+   h3{
+    position: relative;
+    top: -120px;
+
+   }
   
 }
   
@@ -110,6 +120,72 @@ h3{
 .slider img.active {
   opacity: 1;
 }
+
+
+
+.card {
+  position: relative;
+  top: 15px;
+  margin: auto;
+  width: 500px;
+  height: 254px;
+  padding: 0 10px;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 12px;
+  background: #f48db1;
+  border-radius: 20px;
+}
+
+.card > * {
+  margin: 0;
+}
+
+.card__title {
+  font-size: 23px;
+  font-weight: 900;
+  color: #333;
+}
+
+.card__content {
+  font-size: 13px;
+  line-height: 18px;
+  color: #333;
+}
+
+.card__form {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.card__form input {
+  margin-top: 10px;
+  outline: 0;
+  background: rgb(255, 255, 255);
+  box-shadow: transparent 0px 0px 0px 1px inset;
+  padding: 0.6em;
+  border-radius: 14px;
+  border: 1px solid #333;
+  color: black;
+}
+
+.card__form button {
+  border: 0;
+  background: #111;
+  color: #fff;
+  padding: 0.68em;
+  border-radius: 14px;
+  font-weight: bold;
+}
+
+.sign-up:hover {
+  opacity: 0.8;
+} 
+
 
 
 
