--- a/src/styles/menu.css
+++ b/src/styles/menu.css
@@ -30,7 +30,7 @@ nav ul li a {
 	text-transform: uppercase;
 }
 a.active, a:hover {
-	background: #1d075f;
+	background: #5534af8c;
 	transition: .5s;
 }
 .checkbtn {
@@ -62,7 +62,7 @@ a.active, a:hover {
 		position: fixed;
 		width: 100%;
 		height: 100vh;
-		background: #1d075fee;
+		background: #5534af78;
 		top: 80px;
 		left: -100%;
 		text-align: center;
@@ -79,7 +79,7 @@ a.active, a:hover {
 	}
 	a:hover, a.active {
 		background: none;
-		color: #5434af;
+		color: #f7f7f7;
 	}
 	#check:checked ~ ul {
 		left: 0;
