--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,256 +1,118 @@
-*{
-    margin: 0;
-    padding: 0;
-  }
+*{ 
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+body {
+  height: 100%;
+  width: 100%;
+  background: #1a1a1a;
   
-  
-  header {
-    position: relative;
-    top: 10px;
-    max-width: 1500px;
-    background-color: #2a8a4ae1;
-    color: #ffffff;
-    font-size: 20px;
-    border-radius: 10px;
-    gap: 20px;
-  }
-  
-  .container-header {
-    max-width: 1000px;
-    width: 500px;
-    height: 80px;
-    margin: 0 auto;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 0px 20px 0px 20px;
-    gap: 20px;
-  }
-  
-  
-  nav {
-    display: flex;
-    font-size: 25px;
-  }
-  
-  nav a {
-    color: #ffffff;
-    text-decoration: none;
-    margin-left: 20px;
-    cursor: pointer;
-    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-  }
-  
-  .container-section {
-    position: relative;
-    top: 1.5rem;
-    max-width: 1300px;
-    margin: 0 auto;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    gap: 20px;
-  
-  
-  }
-  
-  
-  .cotainer-boa { 
-    display: flex;
-    justify-items: center;
-    align-items: center;
-    flex-direction: column;
-    width: 500px;
-    height: 650px;
-    gap: 20px;
-   
-     
-  
-  }
-  
-  
-  .img-container-map {
-    max-width: 100vw;  
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 20px;
-    padding: 15px;
-    cursor: pointer;
-  }
-  
-  .img-container {
-    max-width: 500px;  
-    max-height: 520px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    gap: 20px;
-    padding: 15px;
-    cursor: pointer;
-  
-  
-  }
-  
-  
-  .img-boadodia {
-    max-width: 142px;  
-    border-radius: 10px;
- 
-  }
-  
-  
-  .cotainer-doc {
-    display: flex;
-    justify-items: center;
-    align-items: center;
-    flex-direction: column;
-    padding: 20px;
-    height: 550px;
-    box-shadow: 3px 5px 6px 5px rgba(58, 117, 61, 0.393); 
-    border-radius: 10px;
-    
-    gap: 10px;
-    background: #2a8a4ae1;
-    overflow-y: auto;
-   
-  
-  }
-  
-  ::-webkit-scrollbar {
-    width: 5px;               /* width of the entire scrollbar */
-  }
-  
-  ::-webkit-scrollbar-thumb {
-    background-color: rgb(255, 255, 255);    /* color of the scroll thumb */
-    border-radius: 10px;       /* roundness of the scroll thumb */
-    border: 3px solid rgb(251, 251, 251);  /* creates padding around scroll thumb */
-  }
-  
-  
-  
-  
-  
-  .doc-container {
-    width: 500px;
-    display: flex;
-  
-    gap: 20px;
-    padding: 15px;
-    cursor: pointer;
-    overflow-x: scroll;
-  
-  }
+}
+h3{
+  color: #fff;
+  text-align: center;
+  padding: 10px;
+}
 
-  .container-section-2{
-    position: relative;
-    top: 2rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    gap: 2rem;
-  }
 
-  
+/*css img integrantes*/
+.home-img-colaboradores{
+  width: 90%;
+  display: flex; 
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
+  overflow-x: auto;
 
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  .doc{
-    max-width: 99%;
-    border-radius: 10px;
-  
-    background: rgb(255, 155, 5);
-    padding: 10px;
-  
-  
-  }
-  
-  
-  
-  
-  
-  .doc-boadodia {
-    width: 70px;
-    border-radius: 5px;
-  
-  }
-  
-  .img-boadodia:hover {
-    border-radius: 2px solid rgb(0, 0, 0);
-  
-  }
+}
+.home-img-colaboradores img{ 
+  width: 70px;
+  padding: 4px;
+  border: 2px solid #ff93b56a;
+  border-radius: 50%;
+  margin: 15px 0px 15px 10px;
+  cursor: pointer;
 
-  .ad{
-    width: 100px;
-  }
+}
+.home-img-cards{
+  display: flex; 
+  gap: 5px;
+  overflow-x: auto; 
+  padding: 20px;
+}
+.home-img-card{
+  width: 150px;
+  margin: 15px 0px 15px 10px;
+  padding-bottom: 10px;
+  border-radius: 5px;   
+  cursor: pointer;
+}
 
-  .cardmapad{
-    max-width: 1000px;
-    width: 1000px;
-    height: 300px;
-    border-radius: 10px;
-    display: flex;
-    justify-content: center; 
-    align-items: center; 
-    gap: 20px;
-    color: #fff; 
-    position: relative;
-    top: 20px;
-    background: rgba(48, 94, 54, 0.651);
+.newsletter{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  
+}
 
-  }
+.cardd {
+  width: 99%;
 
-  .painel{
-    width: 300px;
-    height: 120px;
-    display: flex;
-    align-items: center;
-    align-items: center;
-    gap: 25px;
-    border-radius: 10px;
-    background: #2022213f;
+  padding: 15px;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 12px;
+  background: #fff;
 
-  }
+}
 
-  .container-painel{
-    position: relative;
-    top: 1.5rem;
-    max-width: 1300px;
-    margin: 0 auto;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    gap: 20px;
 
-  }
+.card__title {
+  font-size: 23px;
+  font-weight: 900;
+  color: #333;
+}
 
-  .status{
-    width: 50px;
-    height: 50px;
-    border-radius: 40px ;
-    background: rgba(238, 3, 3, 0.267);
-    position: relative;
-    left: 10px;
-    border: 1px solid rgba(245, 0, 0, 0.171);
+.card__content {
+  font-size: 13px;
+  color: #333;
+}
 
-  }
+.card__form {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.card__form input {
+  margin-top: 10px;
+  outline: 0;
+  background: rgb(255, 255, 255);
+  box-shadow: transparent 0px 0px 0px 1px inset;
+  padding: 0.6em;
+  border-radius: 14px;
+  border: 1px solid #333;
+  color: black;
+}
+
+.card__form button {
+  border: 0;
+  background: #111;
+  color: #fff;
+  padding: 0.68em;
+  border-radius: 14px;
+  font-weight: bold;
+}
+
+
+
+.container-bnt{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #fff;
+}
