--- a/src/styles/menu.css
+++ b/src/styles/menu.css
@@ -1,6 +1,6 @@
 
 nav {
-	background: #5534af78;
+	background: #ff93b56a;
 	height: 80px;
 	width: 100%;
 	display: flex;
@@ -30,7 +30,7 @@ nav ul li a {
 	text-transform: uppercase;
 }
 a.active, a:hover {
-	background: #1d075f;
+	background: #ff93b56a;
 	transition: .5s;
 }
 .checkbtn {
@@ -59,10 +59,10 @@ a.active, a:hover {
 		display: block;
 	}
 	ul{
-		position: fixed;
+		position: absolute;
 		width: 100%;
 		height: 100vh;
-		background: #1d075fee;
+		background: #ff93b56a;
 		top: 80px;
 		left: -100%;
 		text-align: center;
@@ -79,7 +79,7 @@ a.active, a:hover {
 	}
 	a:hover, a.active {
 		background: none;
-		color: #5434af;
+		color: #f7f7f7;
 	}
 	#check:checked ~ ul {
 		left: 0;
