--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -6,7 +6,7 @@
 body {
   height: 100%;
   width: 100%;
-  background: #1a1a1a;
+  background: linear-gradient(45deg, #04051dea 0%, #dd8ecd 100%);
   
 }
 h3{
@@ -18,7 +18,8 @@ h3{
 
 /*css img integrantes*/
 .home-img-colaboradores{
-  width: 90%;
+  margin-top: 20px;
+  width: 100%;
   display: flex; 
   justify-content: center;
   align-items: center;
@@ -117,8 +118,33 @@ h3{
   color: #fff;
 }
 
+.whatsapp-button {
+  position: fixed;
+  bottom: 30px;
+  right: 10px;
+  width: 60px;
+  height: 60px;
+  background-color: green;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  text-decoration: none;
+  font-size: 24px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+}
+
+.whatsapp-button:hover {
+  background-color: darkgreen;
+}
+
 @media screen and (min-width: 606px) {
   body {
     display: none;
    
   }
+
+
+}
+
