--- a/src/styles/menu.css
+++ b/src/styles/menu.css
@@ -1,6 +1,6 @@
 
 nav {
-	background: #ff93b56a;
+	background: linear-gradient(45deg, #04051dea 90%, #dd8ecd 80%);
 	height: 80px;
 	width: 100%;
 	display: flex;
@@ -30,7 +30,7 @@ nav ul li a {
 	text-transform: uppercase;
 }
 a.active, a:hover {
-	background: #ff93b56a;
+	background: #ff93b592;
 	transition: .5s;
 }
 .checkbtn {
@@ -62,7 +62,7 @@ a.active, a:hover {
 		position: absolute;
 		width: 100%;
 		height: 100vh;
-		background: #ff93b56a;
+		background: #ec034d6a;
 		top: 80px;
 		left: -100%;
 		text-align: center;
