--- a/src/styles/card.css
+++ b/src/styles/card.css
@@ -22,16 +22,17 @@
 	 flex-wrap: wrap;
 	 justify-content: center;
 	 gap: 2.5rem;
-	 width: 90%;
+	 width: 98%;
 	 max-width: 1000px;
 	 margin: 10vh auto;
 }
  .card {
-	 border-radius: 16px;
-	 box-shadow: 0 30px 30px -25px rgba(65, 51, 183, .25);
+	 border-radius: 10px;
+	 box-shadow: 0 30px 30px -25px rgba(49, 46, 83, 0.25);
 	 max-width: 300px;
 }
  .information {
+	 width: 500px;
 	 background-color: var(--c-white);
 	 padding: 1.5rem;
 }
