--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,124 +1,231 @@
-*{ 
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+*{
+margin: 0;
+padding: 0;
+box-sizing: border-box;
 }
 body {
-  height: 100%;
-  width: 100%;
-  background: #1a1a1a;
-  
+height: 100%;
+width: 100%;
+background: linear-gradient(45deg, #04051dea 0%, #dd8ecd 100%);
+
 }
 h3{
-  color: #fff;
-  text-align: center;
-  padding: 10px;
+color: #fff;
+text-align: center;
+padding: 10px;
 }
-
 
 /*css img integrantes*/
 .home-img-colaboradores{
-  width: 90%;
-  display: flex; 
-  justify-content: center;
-  align-items: center;
-  gap: 5px;
-  overflow-x: auto;
+margin-top: 20px;
+width: 100%;
+display: flex;
+justify-content: center;
+align-items: center;
+gap: 5px;
+overflow-x: auto;
 
 }
-.home-img-colaboradores img{ 
-  width: 70px;
-  padding: 4px;
-  border: 2px solid #ff93b56a;
-  border-radius: 50%;
-  margin: 15px 0px 15px 10px;
-  cursor: pointer;
+.home-img-colaboradores img{
+width: 70px;
+padding: 4px;
+border: 2px solid #fffffffd;
+border-radius: 50%;
+margin: 15px 0px 15px 10px;
+cursor: pointer;
 
 }
 .home-img-cards{
-  display: flex; 
-  gap: 5px;
-  overflow-x: auto; 
-  padding: 20px;
+display: flex;
+gap: 5px;
+overflow-x: auto;
+padding: 20px;
 }
 .home-img-card{
-  width: 150px;
-  margin: 15px 0px 15px 10px;
-  padding-bottom: 10px;
-  border-radius: 5px;   
-  cursor: pointer;
+width: 150px;
+margin: 15px 0px 15px 10px;
+padding-bottom: 10px;
+border-radius: 8px;
+cursor: pointer;
 }
 
 .newsletter{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  
+display: flex;
+justify-content: center;
+align-items: center;
+
 }
 
 .cardd {
-  width: 99%;
+width: 99%;
 
-  padding: 15px;
-  text-align: center;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  gap: 12px;
-  background: #fff;
+padding: 15px;
+text-align: center;
+display: flex;
+align-items: center;
+justify-content: center;
+flex-direction: column;
+gap: 12px;
+border-radius: 10px;
+background: linear-gradient(45deg, #04051dea 90%, #dd8ecd 80%);
 
 }
 
-
 .card__title {
-  font-size: 23px;
-  font-weight: 900;
-  color: #333;
+font-size: 23px;
+font-weight: 900;
+color: #333;
 }
 
 .card__content {
-  font-size: 13px;
-  color: #333;
+font-size: 13px;
+color: #333;
 }
 
 .card__form {
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
+display: flex;
+flex-direction: column;
+gap: 10px;
 }
 
 .card__form input {
-  margin-top: 10px;
-  outline: 0;
-  background: rgb(255, 255, 255);
-  box-shadow: transparent 0px 0px 0px 1px inset;
-  padding: 0.6em;
-  border-radius: 14px;
-  border: 1px solid #333;
-  color: black;
+margin-top: 10px;
+outline: 0;
+background: rgb(255, 255, 255);
+box-shadow: transparent 0px 0px 0px 1px inset;
+padding: 0.6em;
+border-radius: 14px;
+border: 1px solid #333;
+color: black;
 }
 
 .card__form button {
-  border: 0;
-  background: #111;
-  color: #fff;
-  padding: 0.68em;
-  border-radius: 14px;
-  font-weight: bold;
+border: 0;
+background: #111;
+color: #fff;
+padding: 0.68em;
+border-radius: 14px;
+font-weight: bold;
 }
 
-
-
 .container-bnt{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: #fff;
+display: flex;
+justify-content: center;
+align-items: center;
+color: #fff;
+}
+
+.whatsapp-button {
+position: fixed;
+bottom: 30px;
+right: 10px;
+width: 60px;
+height: 60px;
+background-color: rgb(250, 251, 250);
+border-radius: 50%;
+display: flex;
+align-items: center;
+justify-content: center;
+color: white;
+text-decoration: none;
+font-size: 24px;
+box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+}
+.mascote-button {
+position: fixed;
+bottom: 100px;
+right: 10px;
+width: 60px;
+height: 60px;
+background-color: rgb(250, 251, 250);
+border-radius: 50%;
+display: flex;
+align-items: center;
+justify-content: center;
+color: white;
+text-decoration: none;
+font-size: 24px;
+box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+cursor: pointer;
+}
+
+.whatsapp-button:hover {
+background-color: darkgreen;
+}
+
+.containerbatepapo {
+width: 95%;
+margin: 0 auto;
+padding: 20px;
+background-color: #ffffff;
+border: 1px solid #ccc;
+border-radius: 5px;
+z-index: 2;
+
+}
+
+.containerbatepapo button {
+  position: relative;
+  top: 10px
+  
+}
+
+#sair{
+  position: relative;
+  top: -15px;
+
+}
+
+#bate-papo{
+display: flex;
+justify-content: center;
+align-items: center;
+font-size: 18px;
+margin-bottom: 10px;
+}
+
+#bate-papo img{
+width: 80px;
+}
+
+h1 {
+text-align: center;
+}
+
+label {
+display: block;
+margin-bottom: 10px;
+}
+
+input[type="text"] {
+
+width: 100%;
+padding: 8px;
+font-size: 14px;
+}
+
+button {
+margin-top: 10px;
+padding: 8px 16px;
+background-color: #4CAF50;
+color: #fff;
+font-size: 14px;
+border: none;
+border-radius: 5px;
+cursor: pointer;
+}
+
+.output {
+margin-top: 20px;
+border: 1px solid #ccc;
+border-radius: 5px;
+padding: 10px;
+background-color: #fff;
 }
 
 @media screen and (min-width: 606px) {
-  body {
-    display: none;
-   
-  }
+body {
+display: none;
+}
+
+}
