--- a/src/styles/menu.css
+++ b/src/styles/menu.css
@@ -1,6 +1,5 @@
-
 nav {
-	background: #ff93b56a;
+	background: linear-gradient(45deg, #04051dea 90%, #dd8ecd 80%);
 	height: 80px;
 	width: 100%;
 	display: flex;
@@ -8,7 +7,7 @@ nav {
 	align-items: center;
 }
 
-.logo{
+.logo {
 	margin-top: 20px;
 	cursor: pointer;
 }
@@ -17,11 +16,13 @@ nav ul {
 	float: right;
 	margin-right: 20px;
 }
+
 nav ul li {
 	display: inline-block;
 	line-height: 80px;
 	margin: 0 5px;
 }
+
 nav ul li a {
 	color: white;
 	font-size: 17px;
@@ -29,10 +30,13 @@ nav ul li a {
 	border-radius: 3px;
 	text-transform: uppercase;
 }
-a.active, a:hover {
-	background: #ff93b56a;
+
+a.active,
+a:hover {
+	background: #ff93b592;
 	transition: .5s;
 }
+
 .checkbtn {
 	font-size: 30px;
 	color: white;
@@ -42,46 +46,65 @@ a.active, a:hover {
 	cursor: pointer;
 	display: none;
 }
+
 #check {
 	display: none;
 }
-@media (max-width: 952px){
-	label.logo{
+
+@media (max-width: 952px) {
+	label.logo {
 		font-size: 30px;
 		padding-left: 50px;
 	}
-	nav ul li a{
+
+	nav ul li a {
 		font-size: 16px;
 	}
 }
-@media (max-width: 858px){
+
+@media (max-width: 858px) {
 	.checkbtn {
 		display: block;
 	}
-	ul{
+
+	ul {
 		position: absolute;
 		width: 100%;
-		height: 100vh;
-		background: #ff93b56a;
+		height: 100%;
+		background: #b776a5ac;
 		top: 80px;
 		left: -100%;
 		text-align: center;
 		transition: all .5s;
 		z-index: 1000;
 	}
-	nav ul li{
+
+	nav ul li {
 		display: block;
 		margin: 50px 0;
 		line-height: 30px;
 	}
+
 	nav ul li a {
 		font-size: 20px;
 	}
-	a:hover, a.active {
+
+	a:hover,
+	a.active {
 		background: none;
 		color: #f7f7f7;
 	}
-	#check:checked ~ ul {
+
+	#check:checked~ul {
 		left: 0;
 	}
+
 }
+
+@media screen and (min-width: 500px) {	
+	nav {
+	  background:  #04051dea 
+	}
+	
+  
+  }
