--- a/src/styles/slide.css
+++ b/src/styles/slide.css
@@ -1,64 +1,36 @@
-/* Configurações básicas para o slideshow */
-
 .slideshow-container {
-position: relative;
-width: 100%;
-height: 250px;
-overflow: hidden;
-display: flex;
-justify-content: center;
-align-items: center;
-
+    position: relative;
+    max-width: 100%;
+    margin: auto;
+    width: 100%;
+    height: 280px;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.slideshow-slide {
-position: absolute;
-top: 0;
-left: 0;
-width: 100%;
-height: 100%;
-opacity: 0;
-transition: opacity 1s ease-in-out;
+.mySlides {
+    display: none;
+    width: 100%;
 }
 
-.slideshow-slide img {
-max-width: 100%;
-height: 300px;
+.slideshow-container button {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    background-color: rgba(0, 0, 0, 0.5);
+    color: #fff;
+    font-size: 24px;
+    padding: 10px 15px;
+    border: none;
+    cursor: pointer;
 }
 
-/* Configuração para o primeiro slide */
-.slideshow-slide:first-child {
-opacity: 1;
+.slideshow-container .prev {
+    left: 10px;
 }
 
-/* Animação do slideshow */
-@keyframes slideshow-animation {
-0% {
-opacity: 1;
-}
-20% {
-opacity: 1;
-}
-40% {
-opacity: 0;
-}
-60% {
-    opacity: 0;
-    }
-80% {
-     opacity: 1;
-    }
-100% {
-opacity: 1;
-}
-}
-
-/* Define a animação para as transições de slides */
-.slideshow-slide {
-animation: slideshow-animation 10s ease-in-out infinite;
-}
-
-/* Para pausar a animação quando o mouse estiver em cima do slideshow */
-.slideshow-container:hover .slideshow-slide {
-animation-play-state: paused;
+.slideshow-container .next {
+    right: 10px;
 }
